trying to fix alignment.
I give up for today

--- a/stylesCalibrator.css
+++ b/stylesCalibrator.css
@@ -95,6 +95,9 @@ Button:hover {
   border: 1px solid rgba(0, 0, 0, 0.8);
   text-align: center;
 }
+.grid-item *{
+  text-align: center;
+}
 
 .item1 {
   grid-column:1;
